tests/ui/error-codes/E0308.stderr
error[E0308]: intrinsic has wrong type
  --> $DIR/E0308.rs:6:5
   |
LL |     fn size_of<T>();
   |     ^^^^^^^^^^^^^^^^ expected `()`, found `usize`
   |
   = note: expected fn pointer `extern "crablang-intrinsic" fn()`
              found fn pointer `extern "crablang-intrinsic" fn() -> usize`

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0308`.
